tests/ui/ser-unit-struct.rs
use miniserde::Serialize;

#[derive(Serialize)]
struct UnitStruct;

fn main() {}
